RoadBuddy/views/static/room.css
/* ... */
input[name=search-friend] {
    width: calc(100% - 40px);
    border-radius: 0 30px 30px 0;
    border-style: none;
    background-color: rgb(210, 210, 210);
    font-size: 15px;

}

input[name=create-team]
 {
    width: 100%;
    border-radius: 30px;
    border-style: none;
    background-color: rgb(210, 210, 210);
    font-size: 15px;
    padding-left: 15px;
}

.search-outer {
    width: 100%;
    height: 55%;
}

.search-list {
    display: grid;
    justify-content: center;
    grid-template-columns: 50% 50%;
    gap: 10px;
    margin: 10px 50px;
}

.friends-pannel .item {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    height: 20px;
}

.friends-pannel label {
    width: 65px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    text-align: center;
    margin-left: 5px;
}


.friends-pannel input[type=checkbox],
.teams-pannel input[type=checkbox] {
    width: 20px;
    height: 20px;
    background-color: lightblue;
    border-style: none;
}


.teams-pannel .friends-list label {
    background-color: rgb(182, 232, 176);
    border-radius: 10px;
    border: solid 3px rgb(22, 166, 6);
    text-align: center;
    margin-left: 5px;
    padding: 0px 10px;
}

/* ----- team pannel ----- */
.teams-pannel .friends-outer {
    display: none;
    justify-content: center;
    width: 80%;
    height: 40%;
    overflow-y: scroll;
    margin-top: 10px;
}


.teams-pannel .friends-list {
    display: grid;
    justify-content: center;
    grid-template-columns: 70% 70%;
    gap: 20px;
    margin: 20px 50px 10px 50px;
}

.teams-pannel .item {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 20px;
    height: 20px;
}


.friends-pannel button,
.teams-pannel button{
    width: 30%;
    height: 40px;
    border-radius: 20px;
    border-style: none;
    background-color: rgb(210, 210, 210);
    font-size: 20px;
    font-weight: bold;
    margin-top: 10px;
}

.teams-pannel button.start-trip-btn,
.teams-pannel button.invite-trip-btn,
.teams-pannel button.join-trip-btn
 {
    display: none;
}


/* ------ socket friend and team request ------ */
.friend-prompt,
.team-invite-prompt
{
    display: none;
    position: absolute;
    top: 20vh;
    left: 15vw;
    z-index: 2000;
    width: 65vw;
    background-color: white;
    border-radius: 10px;
    box-shadow: 5px 5px 1px grey;
    padding: 10px;
    text-align: center;
    font-size: 20px;
    font-weight: bold;

}

.friend-response,
.friend-request,
.team-invite-response,
.team-create-response,
.team-join-response,
.team-join-request
{
    display: none;
    position: absolute;
    top: 20vh;
    left: 15vw;
    z-index: 2000;
    width: 65vw;
    background-color: white;
    border-radius: 10px;
    box-shadow: 5px 5px 1px grey;
    padding: 10px;
    text-align: center;
    font-size: 20px;
    font-weight: bold;
}

.friend-prompt button,
.friend-request button,
.team-invite-prompt button,
.friend-response button,
.team-invite-response button,
.team-join-response button,
.team-create-response button,
.team-join-request button
 {
    border-style: none;
    font-size: 20px;
    border-radius: 10px;
    padding: 5px;
    margin-top: 5px;
}

/* ----- tracking pannel ----- */
/* .main-pannel {
    display: none;
} */

.tracking-pannel {
    display: none;
    position: absolute;
    top: 70vh;
    z-index: 1000;
    width: 100vw;
    height: 30vh;
    background-color: white;
    border-radius: 30px 30px 0 0;
}

.tracking-pannel .pannel-title {
    font-size: 30px;
    font-weight: bold;
    margin-top: 20px;
    text-align: center;
}

.tracking-pannel .partners-outer {
    display: flex;
    justify-content: center;
    width: 80%;
    height: 40%;
    margin: auto;
    overflow-y: scroll;    
}

.partners-list  {
    display: grid;
    justify-content: center;
    align-items: start;
    grid-template-columns: 80% 80%;
    gap: 10px;
    margin: 10px 10px;
    width: 50%;
}

.tracking-pannel .item {
    display: flex;
    align-items: center;
    justify-content: start;
    background-color: rgb(235, 234, 234);
    height: 30px;
    width: 80%;
    border-radius: 10px;
    padding-left: 10%;
}

.tracking-pannel .item .icon {
    width: 20px;
    height: 20px;
    margin-right: 10%;
}

.tracking-pannel .username {
    text-align: center;
    font-size: 20px;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

.from {
    display: none;
}

/* ------ alert test ------*/
.alert {
    width: 80%;
    display: none;
}

